--- a/res/layout/user_interface.xml
+++ b/res/layout/user_interface.xml
@@ -4,8 +4,42 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
+    <Switch
+        android:id="@+id/enable_6bed4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onEnablerClick"
         android:paddingTop="25sp"
+        android:text="@string/enable_button_text" />
+
+    <Switch
+        android:paddingTop="35sp"
+        android:id="@+id/persist_accross_reboots"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onPersistClick"
+        android:text="@string/persist_accross_reboots_text" />
+    
+    <TextView
+        android:paddingTop="50sp"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/advanced_settings"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        tools:context=".Android6bed4" />
+    
+    <Switch
+        android:paddingTop="20sp"
+        android:id="@+id/overtake_default_route"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onDefaultRouteClick"
+        android:text="@string/overtake_default_route_text" />
+    
+    <TextView
+        android:paddingTop="35sp"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
@@ -21,7 +55,7 @@
         android:hint="@string/tunserver_address_hint" />
     
     <TextView
-        android:paddingTop="25sp"
+        android:paddingTop="35sp"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -35,29 +69,6 @@
         android:layout_height="wrap_content"
         android:hint="@string/tunclient_port_hint"
         android:inputType="number" />
-    
-    <Switch
-        android:paddingTop="25sp"
-        android:id="@+id/overtake_default_route"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onDefaultRouteClick"
-        android:text="@string/overtake_default_route_text" />
 
-    <Switch
-        android:paddingTop="25sp"
-        android:id="@+id/persist_accross_reboots"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onPersistClick"
-        android:text="@string/persist_accross_reboots_text" />
-    
-    <Switch
-        android:id="@+id/enable_6bed4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onEnablerClick"
-        android:paddingTop="25sp"
-        android:text="@string/enable_button_text" />
 
 </LinearLayout>
